# ipconfig2

./: Cargo.toml  readme.md
examples/: get_uuid.rs
src/: adapter.rs  dns.rs  fwpm.rs  ifindex.rs  lib.rs  utils.rs
