[package]
name = "ipconfig2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["computer"]
computer = ["winreg"]

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.32.0", features = ["Win32_NetworkManagement_IpHelper","Win32_Foundation", "Win32_Networking_WinSock", "Win32_System_Registry"] }
widestring = "1.0.2"
socket2 = "0.5.1"
winreg = { version = "0.50.0", optional = true }
